# chop

./: .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
chop/: __init__.py  cli.py  dsl.py  operations.py  output.py  pipeline.py
examples/: 01-polaroid.sh  02-contact-sheet.sh  03-diptych.sh  04-thumbnail-strip.sh  05-moody-city.sh  06-dreamy-flowers.sh  07-multi-save-sizes.sh  08-tiled-pattern.sh  09-before-after.sh  10-recipe-reuse.sh  11-vstack-triptych.sh  12-inverted-art.sh  13-sepia-vintage.sh  14-circle-avatar.sh  15-rounded-card.sh  16-gapped-comparison.sh  17-canvas-composition.sh  18-watermark-opacity.sh  README.md
tests/: test_chop.py
